# Arka

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.yml  mimir.env.template  pymap.env.template  pyproject.toml
arka/: asgi.py  settings.py  urls.py  utils.py
docker/: Dockerfile.nginx
docker/dovecot/: users.csv
docker/grafana/dashboards/: dashboards.yml
docker/prometheus/: prometheus.yml
docker/rabbitmq/: Dockerfile  rabbitmq.conf
docker/scripts/: celery_init.sh  copy_secrets.sh  django_init.sh  docker-entrypoint.sh  perl_deps.sh
docker/templates/: default.conf.template
forj/: views.py
scripts/: celery_init.sh  copy_secrets.sh  dev_migrate.py  dev_version.py  django_init.sh  uv_upgrade_optional.py
secrets/: .pg_service.conf.template  .pgpass.template  .secret.template  config.dev.json.template  config.json.template  redis.conf.template
src/: README.md  manage.py  pyproject.toml  pyproject.toml.bak  pyproject.toml.old  select_modular_branches.py
src/arka/: context_processors.py  logging.py  settings.py  tasks.py  urls.py  utils.py  views.py  wsgi.py
src/arka/dashboard/: core.py
src/arka/fixtures/: periodic_tasks.json
src/arka/management/commands/: create_management_groups.py  initadmin.py  migrate_modules.py
src/arka/plugins/: apps.py  base.py  discovery.py  models.py
src/arka/templates/: dashboard.html  profile.html
src/arka/templates/monitoring/: database.html  rabbitmq.html  redis.html
src/forj/: apps.py  celery.py  tasks.py  urls.py  utils.py  views.py
src/forj/management/commands/: cleanup_orphaned_tasks.py
src/forj/services/: celery_status.py  celery_tasks.py  rabbitmq.py
src/forj/templates/: forj_checks.html  forj_index.html
src/static/css/: bulma.css  display.css  layout.css  nettools.css  theme.css
src/templates/: base.html
src/templates/components/list/: list.html  pagination.html  search.html  table.html
src/templates/partials/: sidebar.html  theme_toggle.html  topbar.html
src/templates/registration/: login.html
