[project]
name = "arka"
version = "0.1.0"
description = "ARKA Modular Monolith"
authors = [
    {name = "hallowslab", email = "hallows.tech.lab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "redis[hiredis] (>=5.0.1,<6.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "uvicorn-worker (>=0.4.0,<0.5.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "gevent (>=25.9.1,<26.0.0)",
    "requests>=2.32.3,<3.0.0",
]

[project.optional-dependencies]
aera = ["aera"]
bifrost = ["bifrost"]
dbtool = ["dbtool"]
mxr = ["mxr"]
nettools = ["nettools"]
pymap = ["pymap"]
all = ["aera", "bifrost", "dbtool", "mxr", "nettools", "pymap"]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "django-stubs[compatible-mypy] (>=5.2.6,<6.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.7,<0.15.0)",
    "poetry-version-exporter @ https://github.com/hallowslab/poetry-version-exporter/releases/download/v0.1.4/poetry_version_exporter-0.1.4-py3-none-any.whl",
]

[tool.uv.sources]
aera = { git = "https://github.com/hallowslab/AERA.git", branch = "dev" }
bifrost = { git = "https://github.com/hallowslab/BIFROST.git", branch = "dev" }
dbtool = { git = "https://github.com/hallowslab/DBTOOL.git", branch = "dev" }
mxr = { git = "https://github.com/hallowslab/MXR.git", branch = "dev" }
nettools = { git = "https://github.com/hallowslab/NETTOOLS.git", branch = "dev" }
pymap = { git = "https://github.com/hallowslab/Pymap.git", branch = "modularize" }

[tool.hatch.build.targets.wheel]
packages = ["src/arka", "src/forj"]

[tool.taskipy.tasks]
export-versions = "python scripts/dev_version.py"
lint = "task lint_black && task lint_mypy && task lint_ruff"
lint_black = "black ."
lint_ruff = "ruff check"
lint_mypy = "mypy ."
migrate = "python scripts/dev_migrate.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
